{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 40,
  "lineage": "e878c600-51df-a808-9505-3626f64eb420",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0bfdd733094a46a0b",
            "arn": "arn:aws:ec2:ap-southeast-1:801681997870:instance/i-0ac628c720d8eabec",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ac628c720d8eabec",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "thekeypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0002a279bc85ee039"
              }
            ],
            "primary_network_interface_id": "eni-0002a279bc85ee039",
            "private_dns": "ip-10-0-1-58.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.58",
            "public_ip": "18.141.217.21",
            "region": "ap-southeast-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-051a3c9747000db01",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-025f7048b3336806b",
            "tags": {
              "Name": "DellTechnology"
            },
            "tags_all": {
              "Name": "DellTechnology"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-063b5d57c5959338f"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "801681997870",
            "id": "i-0ac628c720d8eabec",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_security_group.allow_ssh",
            "aws_subnet.PubSub",
            "aws_vpc.Mercedes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:801681997870:internet-gateway/igw-05c6073435e0f2686",
            "id": "igw-05c6073435e0f2686",
            "owner_id": "801681997870",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "NewIGW"
            },
            "tags_all": {
              "Name": "NewIGW"
            },
            "vpc_id": "vpc-0299c326bcbc1de85"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.Mercedes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PubRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:801681997870:route-table/rtb-0fc820bb3ba46336d",
            "id": "rtb-0fc820bb3ba46336d",
            "owner_id": "801681997870",
            "propagating_vgws": [],
            "region": "ap-southeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05c6073435e0f2686",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PublicRT"
            },
            "tags_all": {
              "Name": "PublicRT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0299c326bcbc1de85"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "801681997870",
            "id": "rtb-0fc820bb3ba46336d",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.Mercedes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c7d2b34c82bb988f",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-0fc820bb3ba46336d",
            "subnet_id": "subnet-025f7048b3336806b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.PubRT",
            "aws_subnet.PubSub",
            "aws_vpc.Mercedes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:801681997870:security-group/sg-063b5d57c5959338f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-063b5d57c5959338f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20250929195433794700000001",
            "name_prefix": "terraform-",
            "owner_id": "801681997870",
            "region": "ap-southeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "AllowSSH"
            },
            "tags_all": {
              "Name": "AllowSSH"
            },
            "timeouts": null,
            "vpc_id": "vpc-0299c326bcbc1de85"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "801681997870",
            "id": "sg-063b5d57c5959338f",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_vpc.Mercedes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PubSub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:801681997870:subnet/subnet-025f7048b3336806b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-025f7048b3336806b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "801681997870",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "PubSubnet"
            },
            "tags_all": {
              "Name": "PubSubnet"
            },
            "vpc_id": "vpc-0299c326bcbc1de85"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "801681997870",
            "id": "subnet-025f7048b3336806b",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_vpc.Mercedes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Mercedes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:801681997870:vpc/vpc-0299c326bcbc1de85",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a9c8aa1da87f9cec",
            "default_route_table_id": "rtb-09d2e491369f44aa1",
            "default_security_group_id": "sg-039d3a7d982d7c770",
            "dhcp_options_id": "dopt-0d67709be680d3ba8",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0299c326bcbc1de85",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09d2e491369f44aa1",
            "owner_id": "801681997870",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "MercedesAMG"
            },
            "tags_all": {
              "Name": "MercedesAMG"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}